# enpass-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
lite/: Cargo.toml
lite/src/: lite.rs
lite/src/lite/: vault.rs  vaultcommand.rs  vaultmetadata.rs
rpm/: enpass-rust.spec
src/: main.rs  model.rs
src/model/: vault.rs  vaultcommand.rs  vaulterror.rs
