[package]
name = "enpass-rust"
description = "Enpass client written in rust."
version = "0.2.0"
edition = "2021"

[workspace]
exclude = ["lite"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
enpass = { path = "lite" }
flexi_logger = "0.28.5"
rpassword = "7.3.1"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = true      # Strip symbols from binary*
