[package]
name = "enpass"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
hex = "0.4.3"
pbkdf2 = "0.12.2"
rusqlite = { version = "=0.31.0", features = ["sqlcipher", "load_extension"] }
sha2 = "0.10.8"
thiserror = "1.0.63"
memmap = "0.7.0"
log = "0.4.22"
json = "0.12.4"
totp_rfc6238 = "0.6.1"
base32 = "0.5.1"
